task 8 y 9 ok
